# tum-graph-analytics

./: .gitignore  CMakeLists.txt  Makefile  README.md  Task1.ipynb  bosen-patches  project.mk
airfoil/: airfoil.py
bosen_softmax/: .gitignore  Makefile  out.loss  out.stats  out.weight
bosen_softmax/data_extract_script/: extract-model-2csv.ipynb  extract-model10e-2csv.ipynb
bosen_softmax/datasets/: .gitignore
bosen_softmax/script/: kill.py  launch.py  launch.py~  launch10e.py  launch10e.py~  launch10e_4mil.py
bosen_softmax/src/: common.hpp  engine.cpp  engine.hpp  main.cpp  sgd_solver.cpp  sgd_solver.hpp
bosen_softmax_old/: .gitignore  Makefile  README.md
bosen_softmax_old/data_extract_script/: Untitled.ipynb  extract-model-2csv.ipynb  extract-model10e-dense-binary.py  extract-model10e-libsvm.py
bosen_softmax_old/script/: _launch.py  launch.py  launch10e_4mil_bin.py
bosen_softmax_old/src/: engine.cpp
copurchase-graph/: Video Games Graph Analysis.ipynb  coBoughtGraphAnalysis.ipynb  coBoughtGraphAnalysis.py
dmlc/: requirements.txt
dmlc/bosen_softmax/src/: common.hpp  main.cpp~
dmlc/gradient-descent/: gdesc.cpp  split.py
dmlc/linear-algebra/: CMakeLists.txt  armadillo.cpp  eigen.cpp
dmlc/mf-als/: mf-als.cpp  split.py
dmlc/ps_logreg_sgd/: extract-model-2csv.ipynb
gaml/biases/: worker.cpp  worker.h
gaml/bins/: bias-mf.cpp  koren.cpp  mf-als.cpp  tf.cpp
gaml/io/: matrix.cpp  matrix.h  matrix_slice.cpp  matrix_slice.h  tensor.cpp  tensor.hpp
gaml/mf/: nn_projection.cpp  nn_projection.h  projection.h  r_projection.cpp  r_projection.h  worker.cpp  worker.h
gaml/mf/als/: logger.cpp  logger.h  pseudo_inverse_solver.cpp  pseudo_inverse_solver.h  ridge_regression_solver.cpp  ridge_regression_solver.h  solver.h  worker.cpp  worker.h
gaml/mf/gd/: nn_projection.cpp  nn_projection.h  (+5 more)
gaml/tf/: worker.cpp  worker.hpp
gaml/util/: table.cpp  table.h
gradient-descent/: .clang-format  .gitignore  CMakeLists.txt  README.md  gdesc.cpp  generate.py
linear-algebra/: .gitignore  parse_dat.h
matrix-factorisation/: matrix_factorisation.cpp  matrix_factorisation.hpp
mf-als/: .gitignore  CMakeLists.txt  Makefile  matrix_data.cpp  matrix_data.h  mf-als.cpp  split.py  worker.cpp  worker.h
ps_logreg_sgd/: CMakeLists.txt  ps_logreg_sgd.cpp
tf/pythonutils/: Untitled.ipynb  parse_and_split.py  parse_and_split.py~  save_tensor.py~
tf/src/: tensor_data.cpp  tensor_data.cpp~  tensor_data.hpp~  tf_main.cpp  tf_main.cpp~  timer.hpp  worker.cpp  worker.cpp~  worker.hpp  worker.hpp~
utils/: analyze  extract-ratings  features  generate  matrix.py  parse_and_split.py  reviews.py  save_tensor.py  split  transpose
(+15 files in other folders)
